--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,20 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
-  </dependencies>
+  <!-- https://mvnrepository.com/artifact/org.hibernate.orm/hibernate-core -->
+  <dependency>
+      <groupId>org.hibernate.orm</groupId>
+      <artifactId>hibernate-core</artifactId>
+      <version>6.6.3.Final</version>
+  </dependency>
+
+  <!-- https://mvnrepository.com/artifact/com.mysql/mysql-connector-j -->
+  <dependency>
+      <groupId>com.mysql</groupId>
+      <artifactId>mysql-connector-j</artifactId>
+      <version>9.1.0</version>
+  </dependency>
+    </dependencies>
 
   <build>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
